--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
 
