--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,8 +23,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="index.html">Services</a></li>
+            <li><a href="index.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -32,7 +32,7 @@
     <main>
         <section class="contact-form">
             <h2>Contact Us</h2>
-            <form action="mailto:contact@ibadtech.com" method="post" enctype="text/plain">
+            <form action="contact.php" method="post">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
