--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <ul>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="Contact.html">Contact</a>
+            <li><a href="Contact.html">Contact
+                </a>
+<li><a href="https://sales.gromo.in/iv?token=fUcH6NT1ZXcOXLib8y3KohdMxvBNrxPSh9LMTTTsqZO8jWNY3iKrQZi6gmCc%2FoKvl6QcYEUttrKM%2FOmpUuUaemceaUz2Zm7FVqpAcQ%2F0mFhRU8AxvYNPQdTKpJTk4AAt">Check Challan 
+                </a>
                
         </ul>
     </nav>
@@ -33,6 +36,7 @@
         <section id="services" class="services">
             <h2>Our Services</h2>
             <div class="service-container">
+                
                 <div class="service-card">
                     <h3>Digital Marketing</h3>
                     <p>Boost your business with our advanced marketing strategies.</p>
@@ -53,6 +57,13 @@
                     <p>Comprehensive IT solutions for your business needs.</p>
                     <img src="It services.jpg" alt="IT Services Image" class="service-image"> 
                 </div>
+                <a href="https://sales.gromo.in/gp-website/g/w-eoAMuF4UKkEwDg3M-uD" style="text-decoration: none; color: inherit;">
+                <div class="service-card" >
+                    <h3>Apply For Financial Products</h3>
+                    <p>Credit Card | Saving Account | Demat Account | Personal Loan | Investment </p>
+                    <img src="Cl.png" alt="IT Services Image" class="service-image"> 
+                </div>
+                    </a>
             </div>
         </section>
 
@@ -70,7 +81,7 @@
             <h2>Contact Us</h2>
             <p><strong>Address:</strong> Kathgarh Road, Ismailabad, Kurukshetra, Haryana, 136129</p>
             <p><strong>Phone:</strong> <a href="tel:+917056836166">+91 7056836166</a></p>
-            <p><strong>Email:</strong> <a href="mailto:contact@ibadtech.com">contact@ibadtech.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:sainsanty2@gmqil.com">sainsanty2@gmail.com</a></p>
         </section>
     </main>
 
