--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <nav class="navbar">
         <ul>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="https://advisor.turtlemint.com/profile/3136688/gaurav_kumar">Insurance</a></li>
             <li><a href="Contact.html">Contact
                 </a>
-<li><a href="https://sales.gromo.in/iv?token=fUcH6NT1ZXcOXLib8y3KohdMxvBNrxPSh9LMTTTsqZO8jWNY3iKrQZi6gmCc%2FoKvl6QcYEUttrKM%2FOmpUuUaemceaUz2Zm7FVqpAcQ%2F0mFhRU8AxvYNPQdTKpJTk4AAt">Check Challan 
-                </a>
+<li><a href="https://sales.gromo.in/iv?token=fUcH6NT1ZXcOXLib8y3KohdMxvBNrxPSh9LMTTTsqZO8jWNY3iKrQZi6gmCc%2FoKvl6QcYEUttrKM%2FOmpUuUaemceaUz2Zm7FVqpAcQ%2F0mFhRU8AxvYNPQdTKpJTk4AAt" class="check">Apply Credit Card
+              </a>
                
         </ul>
     </nav>
