--- a/index.html
+++ b/index.html
@@ -88,5 +88,9 @@
     <footer class="footer">
         <p>&copy; 2024 Ibad Tech. All Rights Reserved.</p>
     </footer>
+            <a href="https://wa.me/7056836166" class="whatsapp-button" target="_blank">
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+</a>
+
 </body>
 </html>
