--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ibad Tech</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <meta name="google-site-verification" content="G8CQLb8WOf5k-NW2v9DZG08O1SY2U74hzLdiFUO5D2Q" />
 </head>
 <body>
     <header class="header">
