--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Ibad Tech</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <meta name="google-site-verification" content="G8CQLb8WOf5k-NW2v9DZG08O1SY2U74hzLdiFUO5D2Q" />
 </head>
 <body>
     <header class="header">
@@ -15,8 +14,8 @@
                 <img src="Logo.jpg" alt="Ibad Tech Logo" class="logo"> 
             </a>
             <div class="header-text">
-                <h1>Ibad Tech</h1>
-                <p>Digital Marketing | Graphic Design | Web Design | IT Services</p>
+                <h1 class="ibad">Ibad Tech</h1>
+                <p>Digital Marketing | Graphic Design | Web Developer | IT Services</p>
             </div>
         </div>
     </header>
@@ -24,11 +23,11 @@
     <nav class="navbar">
         <ul>
             <li><a href="#services">Services</a></li>
-            <li><a href="https://advisor.turtlemint.com/profile/3136688/gaurav_kumar">Insurance</a></li>
+            <li><a href="https://advisor.turtlemint.com/profile/3136688/gaurav_kumar">Portfolio</a></li>
             <li><a href="Contact.html">Contact
                 </a>
-<li><a href="https://sales.gromo.in/gp-website/g/w-eoAMuF4UKkEwDg3M-uD"class="check">Apply Credit Card
-              </a>
+<li><a href="https://sainismailabad.github.io/Social-media-growth-/"class="check">
+Social Media Growth</a>
                
         </ul>
     </nav>
