--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="#services">Services</a></li>
-            <li><a href="https://advisor.turtlemint.com/profile/3136688/gaurav_kumar">Portfolio</a></li>
+            <li><a href="https://www.instagram.com/ibad_tech?igsh=OW5rNzc0dmE3a2t4>Portfolio</a></li>
             <li><a href="Contact.html">Contact
                 </a>
 <li><a href="https://sainismailabad.github.io/Social-media-growth-/"class="check">
