--- a/index.html
+++ b/index.html
@@ -1,97 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ibad Tech</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ibad Tech</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <a href="#">
-                <img src="Logo.jpg" alt="Ibad Tech Logo" class="logo"> 
-            </a>
-            <div class="header-text">
-                <h1 class="ibad">Ibad Tech</h1>
-                <p>Digital Marketing | Graphic Design | Web Developer | IT Services</p>
-            </div>
+
+  <!-- Header -->
+  <header class="header">
+    <div class="container">
+      <a href="#">
+        <img src="Logo.jpg" alt="Ibad Tech Logo" class="logo" />
+      </a>
+      <div class="header-text">
+        <h1 class="ibad">Ibad Tech</h1>
+        <p>Digital Marketing | Graphic Design | Web Developer | IT Services</p>
+      </div>
+    </div>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#services">Services</a></li>
+      <li><a href="https://www.instagram.com/ibad_tech?igsh=OW5rNzc0dmE3a2t4" target="_blank">Portfolio</a></li>
+      <li><a href="Contact.html">Contact</a></li>
+      <li><a href="https://sainismailabad.github.io/Social-media-growth-/" target="_blank" class="check">Social Media Growth</a></li>
+    </ul>
+  </nav>
+
+  <!-- Services Section -->
+  <main>
+    <section id="services" class="services">
+      <h2>Our Services</h2>
+      <div class="service-container">
+
+        <div class="service-card">
+          <h3>Digital Marketing</h3>
+          <p>Boost your business with our advanced marketing strategies.</p>
+          <img src="digital-marketing-image.png" alt="Digital Marketing" class="service-image" />
         </div>
-    </header>
 
-    <nav class="navbar">
-        <ul>
-            <li><a href="#services">Services</a></li>
-            <li><a href="https://www.instagram.com/ibad_tech?igsh=OW5rNzc0dmE3a2t4">Portfolio</a></li>
-            <li><a href="Contact.html">Contact
-                </a>
-<li><a href="https://sainismailabad.github.io/Social-media-growth-/"class="check">
-Social Media Growth</a>
-               
-        </ul>
-    </nav>
+        <a href="https://www.behance.net/78f58aea" target="_blank" style="text-decoration: none; color: inherit;">
+          <div class="service-card">
+            <h3>Graphic Design</h3>
+            <p>Creative designs tailored to your brand.</p>
+            <img src="Graphic.jpg" alt="Graphic Design" class="service-image" />
+          </div>
+        </a>
 
-    <main>
-        <section id="services" class="services">
-            <h2>Our Services</h2>
-            <div class="service-container">
-                
-                <div class="service-card">
-                    <h3>Digital Marketing</h3>
-                    <p>Boost your business with our advanced marketing strategies.</p>
-                    <img src="digital-marketing-image.png" alt="Digital Marketing Image" class="service-image"> 
-                </div>
-                 <div class="service-card">
-                    <h3>Graphic Design</h3>
-                    <p>Creative designs tailored to your brand.</p>
-                    <img src="Graphic.jpg" alt="Graphic Design Image" class="service-image"> 
-   <a href="https://www.behance.net/78f58aea" style="text-decoration: none; color: inherit;">
-                </div>
-                <div class="service-card">
-                    <h3>Web Design</h3>
-                    <p>Modern, responsive, and user-friendly websites.</p>
-                    <img src="Web degain.jpg" alt="Web Design Image" class="service-image"> 
-                </div>
-                <div class="service-card">
-                    <h3>IT Services</h3>
-                    <p>Comprehensive IT solutions for your business needs.</p>
-                    <img src="It services.jpg" alt="IT Services Image" class="service-image"> 
-                </div>
-                <a href="https://sales.gromo.in/gp-website/g/w-eoAMuF4UKkEwDg3M-uD" style="text-decoration: none; color: inherit;">
-                <div class="service-card" >
-                    <h3>Apply For Financial Products</h3>
-                    <p>Credit Card | Saving Account | Demat Account | Personal Loan | Investment </p>
-                    <img src="Cl.png" alt="IT Services Image" class="service-image"> 
-                </div>
-                    </a>
-            </div>
-        </section>
+        <div class="service-card">
+          <h3>Web Design</h3>
+          <p>Modern, responsive, and user-friendly websites.</p>
+          <img src="Web degain.jpg" alt="Web Design" class="service-image" />
+        </div>
 
-        <section id="about" class="about">
-            <h2>About Us</h2>
-            <p>
-                Located at Kathgarh Road, Ismailabad, Kurukshetra, Haryana, Ibad Tech specializes in delivering 
-                innovative solutions for businesses. Our dedicated team ensures quality services tailored 
-                to your goals.
-            </p>
-            <img src="About us.jpg" alt="About Us Image" class="about-image small"> 
-        </section>
+        <div class="service-card">
+          <h3>IT Services</h3>
+          <p>Comprehensive IT solutions for your business needs.</p>
+          <img src="It services.jpg" alt="IT Services" class="service-image" />
+        </div>
 
-        <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p><strong>Address:</strong> Kathgarh Road, Ismailabad, Kurukshetra, Haryana, 136129</p>
-            <p><strong>Phone:</strong> <a href="tel:+917056836166">+91 7056836166</a></p>
-            <p><strong>Email:</strong> <a href="mailto:sainsanty2@gmqil.com">sainsanty2@gmail.com</a></p>
-        </section>
-    </main>
+        <a href="https://sales.gromo.in/gp-website/g/w-eoAMuF4UKkEwDg3M-uD" target="_blank" style="text-decoration: none; color: inherit;">
+          <div class="service-card">
+            <h3>Apply For Financial Products</h3>
+            <p>Credit Card | Saving Account | Demat Account | Personal Loan | Investment</p>
+            <img src="Cl.png" alt="Financial Products" class="service-image" />
+          </div>
+        </a>
 
-    <footer class="footer">
-        <p>&copy; 2024 Ibad Tech. All Rights Reserved.</p>
-    </footer>
-            <a href="https://wa.me/7056836166" class="whatsapp-button" target="_blank">
-    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
-</a>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+      <h2>About Us</h2>
+      <p>
+        Located at Kathgarh Road, Ismailabad, Kurukshetra, Haryana, Ibad Tech specializes in delivering 
+        innovative solutions for businesses. Our dedicated team ensures quality services tailored to your goals.
+      </p>
+      <img src="About us.jpg" alt="About Us" class="about-image small" />
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+      <h2>Contact Us</h2>
+      <p><strong>Address:</strong> Kathgarh Road, Ismailabad, Kurukshetra, Haryana, 136129</p>
+      <p><strong>Phone:</strong> <a href="tel:+917056836166">+91 7056836166</a></p>
+      <p><strong>Email:</strong> <a href="mailto:sainsanty2@gmail.com">sainsanty2@gmail.com</a></p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2024 Ibad Tech. All Rights Reserved.</p>
+  </footer>
+
+  <!-- WhatsApp Button -->
+  <a href="https://wa.me/7056836166" class="whatsapp-button" target="_blank">
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp.png" alt="WhatsApp" class="whatsapp-icon" />
+  </a>
 
 </body>
 </html>
