--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <div class="header-text">
         <h1 class="ibad">Ibad Tech</h1>
-        <p>Digital Marketing | Graphic Design | Web Developer | IT Services</p>
+        <p>Digital Marketing | Graphic Design | Web & Apps Development</p>
       </div>
     </div>
   </header>
@@ -53,14 +53,14 @@
         </a>
 
         <div class="service-card">
-          <h3>Web Design</h3>
+          <h3>Web Development</h3>
           <p>Modern, responsive, and user-friendly websites.</p>
           <img src="Web degain.jpg" alt="Web Design" class="service-image" />
         </div>
 
         <div class="service-card">
-          <h3>IT Services</h3>
-          <p>Comprehensive IT solutions for your business needs.</p>
+          <h3>Apps</h3>
+          <p>Modern, responsive, and user-friendly websites.</p>
           <img src="It services.jpg" alt="IT Services" class="service-image" />
         </div>
 
