--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <div class="header-text">
         <h1 class="ibad">Ibad Tech</h1>
-        <p>Digital Marketing | Graphic Design | Web & Apps Development</p>
+        <p>Digital Marketing | Graphic Design | Web Developer | IT Services</p>
       </div>
     </div>
   </header>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="service-card">
-          <h3>Apps</h3>
+          <h3>App Development</h3>
           <p>Modern, responsive, and user-friendly websites.</p>
           <img src="It services.jpg" alt="IT Services" class="service-image" />
         </div>
