--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ibad Tech</title>
+  <title>Ibad Tech | Digital Marketing | Web Development | Graphic Design</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Ibad Tech offers Digital Marketing, Graphic Design, Web & App Development, and IT Services. Based in Kurukshetra, Haryana." />
+  <meta name="keywords" content="Ibad Tech, Digital Marketing, Graphic Design, Web Development, App Development, IT Services, Kurukshetra, Haryana, India" />
+  <meta name="author" content="Ibad Tech" />
+
+  <!-- Open Graph (for social media sharing) -->
+  <meta property="og:title" content="Ibad Tech | Digital Marketing, Web & App Services" />
+  <meta property="og:description" content="Explore expert digital marketing, graphic design, and modern website development services by Ibad Tech." />
+  <meta property="og:image" content="https://sainismailabad.github.io/ibadtech/Logo.jpg" />
+  <meta property="og:url" content="https://sainismailabad.github.io/ibadtech/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="Logo.jpg" type="image/jpeg" />
+
+  <!-- Styles & Scripts -->
   <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
 </head>
@@ -60,14 +77,14 @@
 
         <div class="service-card">
           <h3>App Development</h3>
-          <p>Modern, responsive, and user-friendly websites.</p>
-          <img src="It services.jpg" alt="IT Services" class="service-image" />
+          <p>Build fast, scalable mobile applications for Android and iOS.</p>
+          <img src="It services.jpg" alt="App Development" class="service-image" />
         </div>
 
         <a href="https://sales.gromo.in/gp-website/g/w-eoAMuF4UKkEwDg3M-uD" target="_blank" style="text-decoration: none; color: inherit;">
           <div class="service-card">
             <h3>Apply For Financial Products</h3>
-            <p>Credit Card | Saving Account | Demat Account | Personal Loan | Investment</p>
+            <p>Credit Card | Savings Account | Demat Account | Personal Loan | Investment</p>
             <img src="Cl.png" alt="Financial Products" class="service-image" />
           </div>
         </a>
@@ -82,7 +99,7 @@
         Located at Kathgarh Road, Ismailabad, Kurukshetra, Haryana, Ibad Tech specializes in delivering 
         innovative solutions for businesses. Our dedicated team ensures quality services tailored to your goals.
       </p>
-      <img src="About us.jpg" alt="About Us" class="about-image small" />
+      <img src="About us.jpg" alt="About Ibad Tech" class="about-image small" />
     </section>
 
     <!-- Contact Section -->
