--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
         <li><a href="#services">Services</a></li>
         <li><a href="https://www.instagram.com/ibad_tech?igsh=OW5rNzc0dmE3a2t4" target="_blank">Portfolio</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Contact.html">Contact</a></li>
         <li><a href="https://sainismailabad.github.io/Social-media-growth-/" target="_blank" class="check">Social Media Growth</a></li>
       </ul>
     </div>
